--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,29 @@
-version: '3.8'
-
 services:
+  server:
+    build:
+      context: .
+    command: /app/script.sh
+    ports:
+      - 5000:5000
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+    volumes:
+      - .:/app
 
-  env_printer:
-    image: "moose-detector"
-    env_file:
-      - .env
+  mysql-db:
+    image: mysql:5.7
+    container_name: "mysql-db"
+    environment:
+      - "MYSQL_ROOT_PASSWORD=password"
+      - "MYSQL_DATABASE=db"
+      - "MYSQL_ALLOW_EMPTY_PASSWORD=1"
+    healthcheck:
+      test: ["CMD-SHELL", "exit | mysql -h localhost -P 3306 -u root -p$$MYSQL_ROOT_PASSWORD -e 'select 1;'"]
+      interval: 5s
+      timeout: 20s
+      retries: 30
+    ports:
+      - 59838:3306
+    volumes:
+      - ./init_scripts:/docker-entrypoint-initdb.d
